<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_behavior_tree</name>
  <version>0.0.0</version>
  <description>Example package using BehaviorTree.CPP in ROS 2</description>
  <maintainer email="splint@todo.todo">splint</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
